# llama.cpp

./: .gitignore  README.md
TODO/: TODO_bitagg_ternario_llama.md  TODO_event_driven_delta_inference_llama.md  TODO_kv_procedural_long_context_100k.md  TODO_kwta_sparsity_llama.md  TODO_nan_guardian_llama.md  TODO_persistent_semantic_cache_llama.md  TODO_procedural_hashed_sparse_llama.md  TODO_sdr_sparse_llama.md  TODO_seed_delta_debug_toy_model.md  TODO_seed_delta_v1_neuro.md  TODO_seed_delta_weights_k_layer_sublayer.md  TODO_seed_delta_weights_llama.md  TODO_seed_delta_weights_llama_k_multicapa.md  TODO_statecells_sparse_dict_llama.md  TODO_statepack_popcount_llama.md  TODO_tt_lowrank_llama.md  TODO_window_global_attn_llama.md  testing.md
common/: arg.cpp  common.cpp  common.h
ggml/src/: ggml-backend.cpp
include/: llama.h
scripts/: get-wikitext-2.sh  model-inventory.sh  seeddelta-ablate.sh  seeddelta-autogate.py  seeddelta-e8-make-policy.py  seeddelta-e8-run.sh  seeddelta-e8-summary.py  seeddelta-eval.sh  seeddelta-greedy-pack.sh  seeddelta-layer-scan.py  seeddelta-policy-e8-helper.py  seeddelta-policy-eval.sh  seeddelta-report-to-policy.py  statecells-eval.sh
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-model.cpp  llama-model.h  llama-seeddelta.cpp  llama-seeddelta.h  llama-statecells.cpp  llama-statecells.h
tools/: CMakeLists.txt
tools/seeddelta-build/: CMakeLists.txt  sd_build.cpp  sd_cli.cpp  sd_cost.cpp  sd_eval.cpp  sd_ffn_proxy.cpp  sd_policy_resolve.cpp  sd_report.cpp  sd_runner.cpp  sd_utils.cpp  sd_write.cpp  seeddelta-build.cpp  seeddelta_policy.cpp  seeddelta_policy.h  seeddelta_policy_export.cpp  seeddelta_policy_export.h  seeddelta_policy_selftest.cpp  seeddelta_policy_selftest.h
tools/seeddelta-build/include/: sd_build.h  sd_cli.h  sd_constants.h  sd_cost.h  sd_eval.h  sd_ffn_proxy.h  sd_policy_resolve.h  sd_report.h  sd_runner.h  sd_utils.h  sd_write.h
tools/seeddelta-build/policies/: policy.example.gemma.json  policy.example.qwen7b.json  policy.gemma4b.baseline.allowdown.json  policy.gemma4b.baseline.json  policy.gemma4b.coo_gateup_k256.json  policy.gemma4b.coo_gateup_k256_allowdown.json  policy.gemma4b.coo_gateup_k512.json  policy.gemma4b.coo_gateup_k512_allowdown.json  policy.gemma4b.down-only.allowdown.json  policy.gemma4b.down-only.json  policy.gemma4b.gateup-only.json  policy.gemma4b.gateup_k128.json  policy.gemma4b.gateup_p05_0_2.json  policy.gemma4b.gateup_p05_0_35.json  policy.gemma4b.interleave_even_10_18.cli_strip.json  policy.gemma4b.interleave_odd_9_17.cli_strip.json  policy.gemma4b.k128.json  policy.gemma4b.k128_cosxw.json  policy.gemma4b.k128_ffnscore.json  policy.gemma4b.k256.json  policy.gemma4b.mixk_block16.json  policy.gemma4b.mixk_block32.json  policy.mistral7b.abl.layer14.only.json  policy.mistral7b.abl.layers14-15.only.json  policy.mistral7b.abl.layers14-23.down-only.json  policy.mistral7b.abl.layers19-20.only.json  policy.mistral7b.base.json  policy.mistral7b.base.no-strip.json  policy.mistral7b.down14-23.exported.json  policy.mistral7b.stack-strict.19-23.json  policy.qwen7b.down-heavy.json  policy.qwen7b.stack-safe.json
tools/seeddelta-build/selftest/: CMakeLists.txt  report_selftest.cpp  sd_selftest.cpp  sd_toy_matrix.cpp  tiny_transformer_dataset.py  tiny_transformer_train.py
tools/statecells-build/: CMakeLists.txt  sc_build.cpp  sc_cli.cpp  sc_encode.cpp  sc_encode_codes.cpp  sc_encode_row_scale.cpp  sc_encode_train.cpp  sc_eval.cpp  sc_imatrix.cpp  sc_process.cpp  sc_report.cpp  sc_runner.cpp  sc_utils.cpp  statecells-build.cpp
tools/statecells-build/include/: sc_build.h  sc_cli.h  sc_encode.h  sc_eval.h  sc_imatrix.h  sc_process.h  sc_report.h  sc_runner.h  sc_utils.h
